--- a/index.html
+++ b/index.html
@@ -30,10 +30,19 @@
 		<div class="slides">
 			<section data-markdown="./fb_ads.md" data-separator="^\n\n\n" data-vertical="^\n\n">
 			</section>
-			<section data-markdown="crone_job.md" data-separator="^\r?\n- - -\r?\n$" data-separator-vertical="^\s{0,3}\*\s*\*\s*\*[\*\s]*$"
-			 data-notes="^Note:">
+			<section data-markdown="crone_job.md" data-separator="^\r?\n" data-vertical="^\n\n">
 			</section>
 		</div>
+		<div class="slides">
+		
+			<section data-markdown="crone_job.md" data-separator="^\r?\n" data-vertical="^\n\n">
+			</section>
+			</dev>
+		<div class="slides">
+			<section data-markdown="Apache_NIFI/NIFI.md" data-separator="^\r?\n" data-vertical="^\n\n">
+			</section>
+			</dev>
+		
 	</div>
 
 	<!--<script src="lib/js/head.min.js"></script>-->
